--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@ html,body{margin:0;padding:0;font-family:Inter,ui-sans-serif,system-ui,-apple-sy
 .avatar{width:56px;height:56px;border-radius:14px;background:linear-gradient(135deg,var(--primary),#34a853);box-shadow:var(--shadow1)}
 h1{margin:0;font-size:28px;line-height:1.05;font-weight:800;letter-spacing:-0.01em}
 .header-main{display:flex;flex-direction:column;gap:6px;min-width:0;flex:1 1 auto}
-.title-select-wrap{display:inline-flex;align-items:center;gap:10px;position:relative;padding-right:22px;max-width:100%}
+.title-select-wrap{display:flex;align-items:center;gap:10px;position:relative;padding-right:22px;max-width:100%;min-width:0}
 .title-select-wrap::after{content:"";width:12px;height:8px;clip-path:polygon(0 0,100% 0,50% 100%);background:currentColor;opacity:.55;transition:opacity var(--dur) var(--ease),transform var(--dur) var(--ease);pointer-events:none;position:absolute;right:0;top:50%;transform:translateY(-50%)}
 .title-select-wrap:focus-within::after{opacity:1;transform:translateY(-40%)}
-.title-select{appearance:none;border:none;background:transparent;font:inherit;color:var(--ink);padding:0;margin:0;cursor:pointer;line-height:1.1;font-weight:800;letter-spacing:-0.01em;max-width:100%}
+.title-select{appearance:none;border:none;background:transparent;font:inherit;color:var(--ink);padding:0;margin:0;cursor:pointer;line-height:1.1;font-weight:800;letter-spacing:-0.01em;max-width:100%;min-width:0;font-size:clamp(20px,4vw,28px);white-space:nowrap;overflow:hidden;text-overflow:ellipsis}
 .title-select:focus-visible{outline:2px solid rgba(26,115,232,.35);outline-offset:2px;border-radius:6px}
 .title-select option{color:var(--ink)}
 .char-badges{margin-top:4px;display:none;gap:8px;flex-wrap:wrap;align-items:center}
@@ -69,11 +69,18 @@ h1{margin:0;font-size:28px;line-height:1.05;font-weight:800;letter-spacing:-0.01
 .download-btn:focus-visible{outline:2px solid rgba(26,115,232,.35);outline-offset:2px}
 
 /* Stats */
-.stats{display:flex;gap:10px;flex-wrap:wrap}
-.stat{background:#f9fafb;border:1px solid var(--border);border-radius:12px;padding:12px;min-width:100px;flex:1 1 140px;display:flex;flex-direction:column;align-items:center;justify-content:center;gap:4px;text-align:center}
+.stats{display:grid;gap:10px;grid-template-columns:repeat(auto-fit,minmax(140px,1fr));grid-auto-rows:1fr}
+.stat{background:#f9fafb;border:1px solid var(--border);border-radius:12px;padding:12px;display:flex;flex-direction:column;align-items:center;justify-content:center;gap:4px;text-align:center;min-width:0}
+@media (max-width:520px){
+  .row{flex-wrap:nowrap;gap:10px}
+  .header-main{flex:1 1 auto;min-width:0}
+  .title-select-wrap{padding-right:18px;flex:1 1 auto}
+  .title-select{font-size:clamp(18px,5vw,22px)}
+  .download-btn{position:static;margin-left:auto}
+}
 @media (max-width:480px){
-  .stats{justify-content:space-between}
-  .stat{padding:10px;flex:1 1 calc((100% - 20px)/3);max-width:calc((100% - 20px)/3);min-width:0}
+  .stats{grid-template-columns:repeat(3,minmax(0,1fr));gap:8px}
+  .stat{padding:10px}
 }
 .stat .k{font-weight:700;font-size:18px}
 .stat .v{color:var(--muted);font-size:12px}
@@ -255,8 +262,6 @@ html,body,.grid,.grid .col,.card-bd{overflow-anchor:none}
         <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden="true"><path d="M21 21l-4.35-4.35M10.5 18a7.5 7.5 0 1 1 0-15 7.5 7.5 0 0 1 0 15Z" stroke="currentColor" stroke-width="2"/></svg>
         <input id="q" placeholder="Search adventures (name, code, notes, DM)"/>
       </div>
-      <button id="expandAll" class="btn">Expand All</button>
-      <button id="collapseAll" class="btn">Collapse All</button>
       <button id="addCard" class="icon-btn" title="Add new adventure" aria-label="Add new adventure">
         <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M12 5v14M5 12h14"/></svg>
       </button>
@@ -1454,8 +1459,6 @@ function filterAndRender(){
 }
 
 /* --- events --- */
-document.getElementById('expandAll').addEventListener('click',()=>{ grid.querySelectorAll('.card').forEach(c=>{ if(!c.classList.contains('open')) expandCard(c); }); });
-document.getElementById('collapseAll').addEventListener('click',()=>{ grid.querySelectorAll('.card').forEach(c=>{ if(c.classList.contains('open')) collapseCard(c); }); });
 qEl.addEventListener('input',filterAndRender);
 charSel.addEventListener('change',filterAndRender);
 window.addEventListener('resize',()=>{
